# lua-llsocket

./: .gitignore  .gitmodules  .luacheckrc  Makefile  README.md  codegen.lua  configure.ac  configure.lua  covergen.sh  llsocket-scm-1.rockspec
.github/workflows/: test.yml
doc/: README.md  addrinfo.md  cmsghdr.md  cmsghdrs.md  constants.md  device.md  env.md  error.md  msghdr.md  socket.md
rockspecs/: llsocket-0.1.0-1.rockspec  llsocket-0.1.1-1.rockspec  llsocket-0.1.2-1.rockspec  llsocket-0.16.1-1.rockspec  llsocket-0.2.0-1.rockspec  llsocket-0.3.0-1.rockspec  llsocket-0.3.1-1.rockspec  llsocket-0.4.0-1.rockspec  llsocket-0.4.1-1.rockspec  llsocket-0.4.2-1.rockspec  llsocket-0.4.3-1.rockspec  llsocket-0.6.0-1.rockspec  llsocket-scm-1.rockspec
src/: Makefile.in  addr.c  addrinfo.c  client.c  cmsghdr.c  cmsghdrs.c  device.c  env.c  gcfn.c  inet.c  iovec.c  lls_inet.h  lls_stream.h  llsocket.c  llsocket.h  llsocket_addr.h  msghdr.c  opt.c  server.c  socket.c  stream.c  stream_client.c  stream_peer.c  stream_server.c  unix.c
test/: addrinfo_test.lua  bind_try.lua  cmsghdr_test.lua  cmsghdrs_test.lua  connect_try.lua  device_test.lua  dontroute_try.lua  inet_bind_try.lua  inet_connect_try.lua  inet_dgram_try.lua  inet_getaddrinfo_try.lua  inet_listen_try.lua  inet_sendfile_try.lua  listen_try.lua  mcastloop_try.lua  membership_try.lua  multicastif_try.lua  multicastloop_try.lua  multicastttl_try.lua  opt_tcpcork_try.lua  opt_tcpnodelay_try.lua  sendfile_try.lua  socket_try.lua  socketpair_try.lua  srcmembership_try.lua  unix_getaddrinfo_try.lua  unix_socketpair_try.lua  wrap_try.lua
test/socket/: bind_test.lua  close_test.lua  connect_test.lua  dup_test.lua  gcfn_test.lua  listen_test.lua  multicast_test.lua  new_test.lua  pair_test.lua  recvable_test.lua  send_recv_test.lua  sendable_test.lua  shutdown_test.lua  sockopt_test.lua  unwrap_test.lua  wrap_test.lua  write_read_test.lua
tmpl/: llsocket_tmpl.c
var/: address_family.txt  ai_flag.txt  ipproto.txt  msg_flags.txt  ni_flag.txt  scm_types.txt  sendrecv_flags.txt  socktype.txt  sol_levels.txt
